# Encoder

./: CMakeLists.txt
cmake/: arduinofake.cmake
utility/: direct_pin_read.h
